fix(contrast): handle color contrast issues for AA

--- a/src/styles/Question.module.scss
+++ b/src/styles/Question.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-flow: column;
     width: 100%;
-    color: #4783b0;
+    color: #172b66;
     grid-column-gap: 15px;
     grid-row-gap: 15px;
 }
