--- a/src/styles/StoryNavigation.module.scss
+++ b/src/styles/StoryNavigation.module.scss
@@ -81,7 +81,7 @@
 
 .home {
     background-color: #425d29;
-    color: #bfcb8d;
+    color: #c6d198;
     max-width: 100px;
 }
 
